--- a/gratitude/templates/base.html
+++ b/gratitude/templates/base.html
@@ -26,6 +26,9 @@
             <li>
                 <a class="title" href="{% url 'dashboard' %}">Dashboard</a>
             </li>
+            <li>
+              <a class="title" href="{% url 'post_new' %}">Be_Gratefull</a>
+          </li>
             {% endif %}
             <li>
             <a class="title" href="{% url 'posts' %}">Posts</a>
