--- a/gratitude/static/css/style.css
+++ b/gratitude/static/css/style.css
@@ -19,10 +19,10 @@ main {
 
 .content {
     width: 60vw;
-    height: 70%;
-    border-radius: 0.7em;
+    height: 60vh;
+    border-radius: 1em;
     border: solid 0.1px rgba(0, 0, 0, 0.347);
-    background-color: rgb(254, 255, 191);
+    background-color: rgb(227, 202, 219);
     box-shadow:1px 1px 10px 10px #e2f2fb4d;
     transition: box-shadow 0.25s ease-in;
     padding: 3em;
@@ -47,20 +47,31 @@ main {
     flex-wrap: wrap;
     justify-content: center;
     align-items: center;
+    object-fit: contain;
 }
 
 .post-card {
     border: 2px solid black;
-    border-radius: 5px;
-    margin: 7px;
-    padding: 4px;
-    height: 10em;
-    width: 15em;
+    border-radius: 1em;
+    margin: 1em;
+    padding: 1em;
+    height: 12em;
+    width: 14em;
     overflow: scroll;
-    box-shadow: 0.1px 0.1px 2px 2px #0607074d;
+    border: solid 5px rgba(0, 0, 0, 0.781);
+    background-color: rgb(254, 255, 191);
+    box-shadow:1px 1px 4px 4px #e2f2fb4d;
+    transition:0.25s ease-in;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: flex-start;
+    align-items: center;
+    object-fit: contain;
+}
 
-
-
+.post-card:hover {
+    box-shadow: 1px 1px 10px 10px #e2f2fb;
+    transition:0.25s ease-out;
 }
 
 #header {
