--- a/gratitude/templates/posts/list.html
+++ b/gratitude/templates/posts/list.html
@@ -2,26 +2,28 @@
 
 {% block content %}
     <h1>Posts list</h1>
-    <div class="post-card-container">
-        {% for post in posts %}
-        <div class="post-card">
-            <p>By: {{post.author}}</p>
-            <p>Title: {{post.title}}</p>
-            <p>Message: {{post.message}}</p>
-            <p>Company: {{post.company}}</p>
-            {% if post.recipients.all|length > 0 %}
-            <p>Recipients:
-            {% for user in post.recipients.all %}
-            {{user}} </p>
-            <img class="image" src="{{user.profile.pic.url}}" alt="">
-            {% endfor %}
-            {% endif %}
-            <p>Stars given: {{post.stars}}</p>
-            <p>Date: {{post.visit_date}}</p>
-            {% if post.upload|length > 0 %}
-            <img class="image" src="{{post.upload.url}}" alt="">
-            {% endif %}
-        </div>
-        {% endfor %}
-    </div>
+
+    <section class="card">
+        <form action="{% url 'posts' %}" method="get" >
+          <div >
+            <label for="title">Author:</label>
+            <select name="author" id="author">
+                <option disabled selected value> -- select an option -- </option>
+                {% for post in posts %} 
+                <option value="{{post.author.id}}">{{ post.author }}</option>    
+                {% endfor %}
+            </select>
+            <div class="input-group">
+              <label for="title">Title Contains:</label>
+              <input type="text" name="title" id="title">
+            </div>
+          </div>
+          <div>
+            <a href="{% url 'posts' %}">Clear</a>
+            <button type="submit"> Filter </button>
+          </div>
+        </form>
+      </section>
+
+    {% include 'partials/_posts_list.html' with posts=posts %}
 {% endblock %}
